<resources>
    <string name="app_name">EaglekingLockDemo</string>
    <string-array name="operate">
        <item>点击开门</item>
        <item>设置管理码</item>
        <item>设置清空码</item>
        <item>设置锁时间</item>
        <item>重置键盘密码</item>
        <item>重置电子钥匙</item>
        <item>重置锁</item>
        <item>获取操作日志</item>
        <item>获取锁时间</item>
        <item>发送电子钥匙</item>
        <item>获取密码</item>

        <item>车位锁升(仅限车位锁)</item>
        <item>车位锁降</item>
        <item>固件升级</item>
    </string-array>
    <string-array name="week">
        <item>周末</item>
        <item>每日</item>
        <item>工作日</item>
        <item>周一</item>
        <item>周二</item>
        <item>周三</item>
        <item>周四</item>
        <item>周五</item>
        <item>周六</item>
        <item>周日</item>
    </string-array>
    <string name="login">登录</string>
    <string name="login_immediately">立即登录</string>
    <string name="start_hint_msg">mysmart助您开启智慧家庭！</string>
    <string name="login_direct">直接登录</string>
    <string name="waiting">请稍候</string>
    <string name="login_failure">登录失败</string>
    <string name="set_error">设置失败</string>
    <string name="edit_su">修改成功</string>
    <string name="logout">退出登录</string>
    <string name="add_doorbell">添加猫眼</string>
    <string name="scan_qr_add">扫描二维码添加</string>
    <string name="device_account">设备帐号</string>
    <string name="add">添加</string>
    <string name="save">保存</string>
    <string name="add_smart_doorbell">添加智能猫眼</string>
    <string name="no_smart_doorbell">您还没有添加智能猫眼</string>
    <string name="current_device_">当前设备：%s</string>
    <string name="into_device">进入设备</string>
    <string name="user_list">用户列表</string>
    <string name="push_info">推送信息</string>
    <string name="param_set">参数设置</string>
    <string name="close">关闭</string>
    <string name="videotap">录像</string>
    <string name="mute">静音</string>
    <string name="talk_back">对讲</string>
    <string name="take_picture">拍照</string>
    <string name="unlock">开锁</string>
    <string name="online">在线</string>
    <string name="offline">离线</string>
    <string name="unlock_hint">是否解锁？</string>
    <string name="exit_video_hint">是否退出视频通话？</string>
    <string name="device_list">设备列表</string>
    <string name="unlock_succ">解锁成功</string>
    <string name="cut_picture_success">截取成功</string>
    <string name="target_reject_bind">目标拒绝绑定</string>
    <string name="binded">已绑定</string>
    <string name="doorbell_net_error">猫眼网络请求失败</string>
    <string name="user_not_in_bind">用户不在绑定界面</string>
    <string name="push_msg">推送消息</string>
    <string name="msg_record">消息记录</string>
    <string name="img_record">影像记录</string>
    <string name="choose_all">全部选择</string>
    <string name="choose">选择</string>
    <string name="c_all">全选</string>
    <string name="delete">删除</string>
    <string name="doorbell_set">门铃设置</string>
    <string name="net_pull">网络推送</string>
    <string name="leave_msg">留言</string>
    <string name="send_msg">发送短信</string>
    <string name="dial">拨打电话</string>
    <string name="video_call">视频呼叫</string>
    <string name="smart_monitor">智能监控</string>
    <string name="open">打开</string>
    <string name="bell_alarm">铃声报警</string>
    <string name="unbind">解除绑定</string>
    <string name="delete_failure">删除失败</string>
    <string name="edit">编辑</string>
    <string name="unbind_confirm">确定解绑？</string>
    <string name="unbind_failure">解绑失败</string>
    <string name="unbind_succ">解绑成功</string>
    <string name="need_authority">需要开启权限后才能使用</string>
    <string name="delete_succ">删除成功</string>
    <string name="delete_device_msg">确定要移除设备吗？</string>
    <string name="confirm">确定</string>
    <string name="input_no_null">输入不能为空</string>
    <string name="property_use_msg">打开监管委托，输入物业编号及正确的房号，以便物业为您提供的监管服务。</string>
    <string name="is_download">是否下载？</string>
    <string name="is_cancel_download">是否取消下载？</string>
    <string name="current_can_not_delete">当前不能执行删除操作</string>
    <string name="avator">头像</string>
    <string name="account">帐号</string>
    <string name="nickname">昵称</string>
    <string name="change_pwd">修改密码</string>
    <string name="personal_information">个人信息</string>
    <string name="link_name_hint">联动命名（必填）</string>
    <string name="meet_trigger_hint">当满足以下触发条件时</string>
    <string name="timer_trigger">定时触发</string>
    <string name="sensor_trigger">传感器触发</string>
    <string name="execute_scene_hint">执行场景里的操作</string>
    <string name="scene">场景</string>
    <string name="sunday">星期日</string>
    <string name="repeat_set">重复设置</string>
    <string name="timer_set">定时设置</string>
    <string name="non_partition">未分区</string>
    <string name="no_device_msg">还没有添加设备哦！快去添加吧！</string>
    <string name="scene_named_msg">场景命名（必填）</string>
    <string name="add_device_to_scene_msg">添加设备并设置要执行的操作</string>
    <string name="scene_choose_device_msg">选择以下设备，并设置要执行的操作</string>
    <string name="someone_home_format">%s的家</string>
    <string name="go_home_mode">回家模式</string>
    <string name="out_home_mode">离家模式</string>
    <string name="execute">执行</string>
    <string name="edit_nickname">修改昵称</string>
    <string name="input_nickname">请输入昵称</string>
    <string name="clear_cache">清除缓存</string>
    <string name="gateway_info">网关信息</string>
    <string name="current_gateway">当前网关</string>
    <string name="snid">SNID</string>
    <string name="version">版本</string>
    <string name="gateway_list">网关列表</string>
    <string name="no_get_gateway_info">未获取到网关信息</string>
    <string name="delete_confirm">确定删除？</string>
    <string name="pause">暂停</string>
    <string name="curtain">窗帘</string>
    <string name="scene_name_exist">场景名称已存在</string>
    <string name="delete_scene">删除场景</string>
    <string name="device_scene">设备场景</string>
    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>
    <string name="trigger_time">触发时间</string>
    <string name="repeat">重复</string>
    <string name="sensor">传感器</string>
    <string name="trigger_state">触发状态</string>
    <string name="every_day">每天</string>
    <string name="work_day">工作日</string>
    <string name="monday_">周一&#160;</string>
    <string name="tuesday_">周二&#160;</string>
    <string name="wednesday_">周三&#160;</string>
    <string name="thursday_">周四&#160;</string>
    <string name="friday_">周五&#160;</string>
    <string name="saturday_">周六&#160;</string>
    <string name="sunday_">周日&#160;</string>
    <string name="scene_list">场景列表</string>
    <string name="execute_device">执行设备</string>
    <string name="no_sensor_msg">啊哦！还没有传感器设备，快去添加吧！</string>
    <string name="choose_trigger_state">请选择要触发的状态</string>
    <string name="close_">关</string>
    <string name="open_">开</string>
    <string name="choose_ir_device">选择红外设备</string>
    <string name="custom">自定义</string>
    <string name="stb">机顶盒</string>
    <string name="air">空调</string>
    <string name="tv">电视</string>
    <string name="match">匹配</string>
    <string name="study">学习</string>
    <string name="match_ir_msg">点击”匹配”，当设备上的红色指示灯亮起来后，按下遥控器上的开机键</string>
    <string name="device_named">设备命名</string>
    <string name="control_name_msg">请给遥控命名</string>
    <string name="add_custom_btn">添加自定义按钮</string>
    <string name="add_device_msg">接通电源，确认组网指示灯处于待连接状态</string>
    <string name="red_lamp_light">红灯亮起</string>
    <string name="add_fbee_curtain">添加物联网窗帘</string>
    <string name="add_fbee_device_msg">网关指示灯闪烁，表示设备正在入网，请耐心等待</string>
    <string name="device_name_msg">请给设备命名</string>
    <string name="add_ir_control">添加红外遥控器</string>
    <string name="yellow_lamp_light">黄灯亮起</string>
    <string name="link_list">联动列表</string>
    <string name="can_not_input_key">不能使用关键字命名</string>
    <string name="name_exist_msg">名称已存在</string>
    <string name="edit_failure">修改失败</string>
    <string name="match_data_next_msg">设备无反应时，点击继续。设备有反应时，点击保存</string>
    <string name="go_on">继续</string>
    <string name="no_match_data">没有红外数据了</string>
    <string name="match_failure">匹配失败</string>
    <string name="ir_control_list">红外遥控器列表</string>
    <string name="no_get_version">未获取到版本信息</string>
    <string name="temp">&#186;C</string>
    <string name="mode">模式</string>
    <string name="wind_speed">风速</string>
    <string name="wind_dir">风向</string>
    <string name="temperature">温度</string>
    <string name="change_camera">切换摄像头</string>
    <string name="volume">音量</string>
    <string name="channel">频道</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="night">9</string>
    <string name="zero">0</string>
    <string name="exit">退出</string>
    <string name="av_tv">AV/TV</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="regex_phone">^1[345678]\\d{9}$</string>
    <string name="delete_linkage">删除联动</string>
    <string name="add_sensor_msg">用顶针插入“复位孔”保持4秒至指示灯闪烁</string>
    <string name="light_flicker">指示灯闪烁</string>
    <string name="state">状态</string>
    <string name="tamper">防拆</string>
    <string name="quantity">电量</string>
    <string name="msg_push">消息推送</string>
    <string name="open_door">开门</string>
    <string name="close_door">关门</string>
    <string name="unnormal">异常</string>
    <string name="normal">正常</string>
    <string name="out_water">超水位</string>
    <string name="have_human">有人</string>
    <string name="no_human">无人</string>
    <string name="sos">紧急呼救</string>
    <string name="unknown_1">未知1</string>
    <string name="unknown_2">未知2</string>
    <string name="unknown_3">未知3</string>
    <string name="unknown_4">未知4</string>
    <string name="unknown_5">未知5</string>
    <string name="unknown_6">未知6</string>
    <string name="unknown_7">未知7</string>
    <string name="unknown_8">未知8</string>
    <string name="ir_study_hint_1">1.点击以下要学习的按钮</string>
    <string name="ir_study_hint_2">2.将遥控发射头对准红外发射设备，并长按被学习的按键1到2秒</string>
    <string name="study_failure">学习失败</string>
    <string name="memory_space_full">存储空间已满</string>
    <string name="undefinition">未定义</string>
    <string name="clear_study_data_msg">清空学习数据？</string>
    <string name="input_name">请输入名称</string>
    <string name="study_succ">学习成功</string>
    <string name="add_study_msg">请将遥控发射头对准红外发射设备，并长按被学习的设备1-2秒</string>
    <string name="new_version_msg">您有新的版本，是否前往更新？</string>
    <string name="name_key_msg">请给按键命名</string>
    <string name="pressed_to_say">请按下说话</string>
    <string name="listening">聆听中</string>
    <string name="ir">红外</string>
    <string name="no_gateway_msg">请先添加网关</string>
    <string name="no_get_device_msg">没有获取到设备信息</string>
    <string name="no_instructions_msg">未检测到相关操作指令</string>
    <string name="confirm_up">上</string>
    <string name="confirm_down">下</string>
    <string name="confirm_left">左</string>
    <string name="confirm_right">右</string>
    <string name="use">使用</string>
    <string name="open_device_succ">打开设备成功</string>
    <string name="get_code_failure">获取验证码失败</string>
    <string name="get_data_failure">获取数据失败</string>
    <string name="no_get_data">没有获取数据</string>
    <string name="auth_failure">授权失败</string>
    <string name="runing">正在运行</string>
    <string name="close_device_succ">关闭设备成功</string>
    <string name="pause_device_succ">暂停设备成功</string>
    <string name="exit_video">关闭视频</string>
    <string name="input_username">输入用户名</string>
    <string name="input_userid">输入userId</string>
    <string name="input_token">输入token</string>
    <string name="get_success">获取成功</string>
    <string name="get_token">获取token</string>
    <string name="ok">确定</string>
</resources>