<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_bottom_function"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:background="@color/black_4c000000">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_video_talk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:drawablePadding="7dp"
            android:drawableTop="@drawable/doorbell_speak_selector"
            android:includeFontPadding="false"
            android:text="@string/talk_back"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_video_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="46dp"
            android:layout_marginRight="46dp"
            android:drawablePadding="7dp"
            android:drawableTop="@drawable/doorbell_video_take_pic_selector"
            android:includeFontPadding="false"
            android:text="@string/take_picture"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_video_talk"
            app:layout_constraintEnd_toStartOf="@+id/tv_video_talk"
            app:layout_constraintTop_toTopOf="@+id/tv_video_talk"/>

        <TextView
            android:id="@+id/tv_video_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="46dp"
            android:layout_marginRight="46dp"
            android:drawablePadding="7dp"
            android:drawableTop="@drawable/doorbell_video_record_selector"
            android:includeFontPadding="false"
            android:text="@string/videotap"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_video_picture"
            app:layout_constraintEnd_toStartOf="@+id/tv_video_picture"
            app:layout_constraintTop_toTopOf="@+id/tv_video_picture"/>

        <TextView
            android:id="@+id/tv_video_lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="46dp"
            android:layout_marginStart="46dp"
            android:drawablePadding="7dp"
            android:drawableTop="@drawable/doorbell_lock_selector"
            android:includeFontPadding="false"
            android:text="@string/unlock"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_video_talk"
            app:layout_constraintStart_toEndOf="@+id/tv_video_talk"
            app:layout_constraintTop_toTopOf="@+id/tv_video_talk"/>

        <TextView
            android:id="@+id/tv_video_mute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="46dp"
            android:layout_marginStart="46dp"
            android:drawablePadding="7dp"
            android:drawableTop="@drawable/doorbell_mute_selector"
            android:includeFontPadding="false"
            android:text="@string/mute"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_video_lock"
            app:layout_constraintStart_toEndOf="@+id/tv_video_lock"
            app:layout_constraintTop_toTopOf="@+id/tv_video_lock"/>
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/tv_exit_video"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:background="@drawable/exit_video_shape"
        android:gravity="center"
        android:text="@string/exit_video"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_change_camera"/>

    <TextView
        android:id="@+id/tv_change_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:background="@drawable/change_camera_shape"
        android:gravity="center"
        android:text="@string/change_camera"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_exit_video"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"/>
</android.support.constraint.ConstraintLayout>