<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/immersive"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_eeeeee"
    android:orientation="vertical"
    tools:context="com.szjcyh.demo.function.ui.AddDoorbellActivity">

    <include layout="@layout/include_title"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="25dp"
        android:background="@color/gray_dcdcdc"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_scanf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:drawablePadding="9dp"
            android:drawableTop="@mipmap/add_device_icon_code_u"
            android:gravity="center_horizontal"
            android:paddingTop="50dp"
            android:text="@string/scan_qr_add"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/et_device_account"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/tv_scanf"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="51dp"

            android:gravity="center"
            android:hint="@string/device_account"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/gray_b5b5b5"
            android:textSize="16sp"/>

        <RelativeLayout
            android:id="@+id/rl_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_device_account"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="33dp"
            android:layout_marginRight="33dp"
            android:layout_marginTop="90dp"
            >

            <ImageView
                android:id="@+id/iv_shadow"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:src="@mipmap/test"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tv_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/login_btn_selector"
                android:enabled="false"
                android:gravity="center"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textSize="16sp"/>
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>